<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_statistics"
    tools:context="pistachio.com.biotap.Statistics">

    <TextView
        android:id="@+id/statTitle00"
        android:text="@string/statTitle00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:textColor="#4CAF50"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="20dp"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/statTitle01"
        android:text="@string/statTitle01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/statTitle00"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp" />
    <TextView
        android:id="@+id/statText01"
        android:text="@string/statText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/statTitle01"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/statTitle02"
        android:text="@string/statTitle02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/statTitle01"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp" />
    <TextView
        android:id="@+id/statText02"
        android:text="@string/statText02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBottom="@+id/statTitle02"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/statTitle03"
        android:text="@string/statTitle03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/statTitle02"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp" />
    <TextView
        android:id="@+id/statText03"
        android:text="@string/statText03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBottom="@+id/statTitle03"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/statTitle04"
        android:text="@string/statTitle04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/statTitle03"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp" />
    <TextView
        android:id="@+id/statText04"
        android:text="@string/statText04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBottom="@+id/statTitle04"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete all data"
        android:id="@+id/deleteall"
        android:layout_below="@+id/statTitle04"
        android:layout_marginTop="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#fff"
        android:textStyle="bold"
        android:background="#F44336"
        android:textSize="20dp" />

</RelativeLayout>